# wavelet-tree

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  shell.nix  wavelet.h
.github/workflows/: tests.yml
include/: compressor.h  file.h  foo.h  types.h  wavelet.h
src/: benchmark.c  compressor.c  entropy.c  file.c  main.c  wavelet.c  wavelet.cpp
tests/: CMakeLists.txt  test_foo.c  test_wavelet.c
tools/benchmarks/: make_plots.py  wavelet_at.py  wavelet_kth_smallest.py  wavelet_leq.py  wavelet_rank.py
tools/entropy/: gen_entropy_file.sh
